--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ body, html {
 }
 
 .person-section {
-    border: 2px solid #ccc;
+    /* border: 2px solid #ccc; */
     padding: 10px;
     margin-bottom: 20px;
     text-align: center; /* Center the content */
