--- a/src/style.css
+++ b/src/style.css
@@ -81,3 +81,13 @@ body, html {
   .bold-text {
     font-weight: bold;
   }
+
+  .contact-padding {
+    padding-bottom: 0px;
+    padding-top: 32px;
+  }
+
+  .footer-padding {
+    padding-top: 0px;
+    padding-bottom: 32px;
+  }
